...
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:contentDescription="@string/details_fragment_image"
    />

    <ImageView
        android:id="@+id/details_fragment_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back24px" />
...
        app:layout_constraintBottom_toBottomOf="@id/details_fragment_image"
        app:layout_constraintStart_toStartOf="parent"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/details_fragment_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:contentDescription="@string/details_fragment_floating_button"
        app:layout_constraintTop_toBottomOf="@+id/details_fragment_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/details_fragment_cardview_info"
...
